--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
 		<h1>git git gitgub</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, dolore!</p>
 		<h1>hei hei </h1>
+
+    <input type="text" name="" id="">
+    <br>
+    <button>click me</button>
 	</body>
 </html>
