--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, dolore!</p>
 		<h1>hei hei </h1>\
 		<p>nil pori nilangona</p>
+		<p>new style button</p>
+
+		<button>here me</button>
 	</body>
 </html>
